# rgptg-thesis-project

./: .gitignore  README.md  config.dashscope.example.json  config.example.json  config.neo4j.example.json  pyproject.toml  requirements-optional.txt
data/: ai_general_expansion.json  ai_general_qwen_eval_kg.json  domain_kg.json  sample_kg.json  wikidata_ai_sample.json
docs/: algorithm_design.md  dynamic_kg_dag.md  project_outline.md  wikidata_neo4j.md
examples/: batch_eval_judge_tasks.jsonl  batch_eval_tasks.jsonl  batch_eval_tasks_15_balanced.jsonl  batch_eval_tasks_15_kg_related.jsonl  batch_eval_tasks_90.jsonl  kg_expansion_topics.json  tasks.jsonl
outputs/: batch_compare_15_balanced_adaptive_gate_070_qwenmax.csv  batch_compare_15_balanced_adaptive_gate_070_qwenmax.md  batch_compare_15_balanced_adaptive_gate_070_qwenmax_pair_metrics.csv  batch_compare_15_kg_related_qwen_judged.csv  batch_compare_15_kg_related_qwen_judged.md  batch_compare_15_kg_related_qwen_pair_metrics.csv  batch_compare_15_qwen_generated_judged_v2.csv  batch_compare_15_qwen_generated_judged_v2.md  batch_compare_15_qwen_generated_pair_metrics_v2.csv  batch_compare_90_after_expand_judged.csv  batch_compare_90_after_expand_judged.md  batch_compare_90_after_expand_pair_metrics.csv  kg_quality_report_after_general_expand.md
scripts/: neo4j_console_e.ps1  start_neo4j_e.ps1
src/rgptg/: __init__.py  batch_compare.py  cli.py  config.py  evaluation.py  experiment.py  factory.py  graph_export.py  kg.py  kg_ablation.py  kg_expand.py  kg_graph_builder.py  kg_quality.py  llm.py  (+10 more)
tests/: test_pipeline.py
(+3 files in other folders)
